--- a/sdc_maintenance/views/maintenance_views.xml
+++ b/sdc_maintenance/views/maintenance_views.xml
@@ -520,7 +520,7 @@
         </record>       
         
         
-     <!-- equipment : views -->
+     <!-- equipments : views -->
     <record id="maintenance.hr_equipment_view_form" model="ir.ui.view">
         <field name="name">equipment.form.maint</field>
         <field name="model">maintenance.equipment</field>
