Update Views Maintenance

--- a/sdc_maintenance/views/website_templates.xml
+++ b/sdc_maintenance/views/website_templates.xml
@@ -1,121 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-	  <template id="request">
-			<t t-call="website.layout">
-			  <t t-set="title">Intervention Request</t>
-			  <form action="/intervention/request" method="post">
-			    <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
-			    <div class="container">
-			    	<br/>
-			        <center><h3>Intervention Request</h3></center>
-					 <input type="text" name="user" t-att-value="user"/>
-			        <div class="row ">
-			        <br/>
-			        <br/>
-			          <div class="col-md-6 form-group">
-			            <label class="control-label" for="category_id">Category:</label>
-	                    <select name="category_id" class="form-control">
-	                      <option value=""> -- Select category -- </option>
-	                      <t t-foreach="categories" t-as="category_id">
-	                        <option t-att-value="category_id.id">
-	                          <t t-esc="category_id.name" />
-	                        </option>
-	                      </t>
-	                    </select>
-			          </div>		          			         
-
-			          <div class="col-md-6 form-group">
-			            <label class="control-label" for="equipment_id">Equipment:</label>
-	                    <select name="equipment_id" class="form-control">
-	                      <option value=""> -- Select equipment -- </option>
-	                      <t t-foreach="equipments" t-as="equipment_id">
-	                        <option t-att-value="equipment_id.id">
-	                          <t t-esc="equipment_id.name" />
-	                        </option>
-	                      </t>
-	                    </select>
-			          </div>
-	
-				      <div class="col-md-6 form-group">
-			            <label class="control-label" for="partner_id">Partner:</label>
-	                    <select name="partner_id" class="form-control">
-	                      <option value=""> -- Select partner -- </option>
-	                      <t t-foreach="partners" t-as="partner_id">
-	                        <option t-att-value="partner_id.id">
-	                          <t t-esc="partner_id.name" />
-	                        </option>
-	                      </t>
-	                    </select>
-			          </div>
-
-				      <div class="col-md-6 form-group">
-			            <label class="control-label" for="state_id">Equipment state:</label>
-	                    <select name="state_id" class="form-control">
-	                      <option value=""> -- Select equipment state -- </option>
-	                      <t t-foreach="equip_states" t-as="state_id">
-	                        <option t-att-value="state_id">
-	                          <t t-esc="state_id" />
-	                        </option>
-	                      </t>
-	                    </select>
-			          </div>
-			          			          		          			          
-			          <div class="col-md-6 form-group">
-			            <label class="control-label" for="priority">Priority:</label>
-	                    <select name="priority" class="form-control">
-	                      <option value=""> -- Select priority -- </option>
-	                      <t t-foreach="priorities" t-as="priority">
-	                        <option t-att-value="priority">
-	                          <t t-esc="priority" />
-	                        </option>
-	                      </t>
-	                    </select>
-			          </div>
-			         
-			         <div class="col-md-6 form-group">
-			            <label class="control-label" for="zone_id">Zone:</label>
-	                    <select name="zone_id" class="form-control">
-	                      <option value=""> -- Select type -- </option>
-	                      <t t-foreach="zones" t-as="zone_id">
-	                        <option t-att-value="zone_id.id">
-	                          <t t-esc="zone_id.name" />
-	                        </option>
-	                      </t>
-	                    </select>
-			          </div>
-
-			          <div class="col-md-6 form-group">
-			            <label for="motif">Description:</label>
-			             <textarea class="form-control" name="motif"><t t-att-value="motif"/></textarea>
-			          </div>
-			          			          
-			         <div class="col-md-6 form-group">
-			            <label class="control-label" for="failure_type">Failure type:</label>
-	                    <select name="failure_type" class="form-control">
-	                      <option value=""> -- Select failure -- </option>
-	                      <t t-foreach="failures" t-as="failure_id">
-	                        <option t-att-value="failure_id.id">
-	                          <t t-esc="failure_id.name" />
-	                        </option>
-	                      </t>
-	                    </select>
-			          </div>
-			          			          
-
-			          
-			        </div>    
-                
-			        <div class="row">
-			          <div class="col-md-12">
-			            <button type="submit" class="btn btn-default btn-primary">
-			              Submit <span class="fa fa-long-arrow-right" />
-			            </button>
-			          </div>
-			        </div>
-			    </div>
-			  </form>
-			</t>
-	</template>
+	<template id="request">
+	<t t-name="request">
+    <t t-call="website.layout">
+        <t t-set="title">Nueva Solicitud de Soporte Técnico</t>
+        <div id="wrap">
+            <div class="oe_structure">
+                <section class="s_cover parallax bg-black-50 oe_img_bg oe_custom_bg s_parallax_is_fixed pb0 pt0" data-scroll-background-ratio="1" style="background-image: none;">
+                    <span class="s_parallax_bg oe_img_bg oe_custom_bg" style="background-image: url(&quot;/web/image/949/azurion.jpg&quot;); background-position: 50% 0px;"/>
+                    <div class="container">
+                        <div class="row s_nb_column_fixed">
+                            <div class="col-lg-12 s_title pt32" data-name="Title">
+                                <h1 class="s_title_thin" style="font-size: 62px; text-align: center;">Portal del Cliente</h1>
+                                <h2 class="s_title_thin" style="font-size: 28px; text-align: center;">
+                                    <t>
+                                        <p>
+                                            <font class="bg-beta" style="color: rgb(255, 255, 255);"><t t-esc="parent_name"/></font>
+                                        </p>
+                                    </t>
+                                </h2>
+                            </div>
+                            <div class="col-lg-12 s_text pt16 pb16" data-name="Text">
+                                <p class="lead" style="text-align: center;">Gestione todas las solicitudes de Soporte Técnico
+                                    
+                                    <br/> y rastree el ciclo de vida de las solicitudes, desde la creación hasta la resolución..
+                                
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <form action="/intervention/request" method="post">
+                        <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
+                        <input type="hidden" name="user" t-att-value="user"/>
+                        <div class="container">
+                            <br/>
+                            <center><h2 class="s_title_thin" style="font-size: 28px; text-align: center;">Nueva Solicitud</h2></center>
+                            <br/>
+                            <div class="row ">
+                                <br/>
+                                <br/>
+                                <div class="col-md-6 form-group">
+                                    <label class="control-label" for="equipment_id">Equipo:</label>
+                                    <select name="equipment_id" class="form-control select2">
+                                        <option value=""> -- Seleccione el Equipo -- </option>
+                                        <t t-foreach="equipments" t-as="equipment_id">
+                                            <option t-att-value="equipment_id.id">
+                                                <t t-esc="equipment_id.x_studio_n_externo"/>
+                                                <t t-esc="equipment_id.category_id.name"/>
+                                                <t t-esc="equipment_id.x_studio_marca.x_name"/>
+                                                <t t-esc="equipment_id.x_studio_modelo.x_name"/>
+                                                <t t-esc="equipment_id.serial_no"/>
+                                            </option>
+                                        </t>
+                                    </select>
+                                </div>
+                                <div class="col-md-12 form-group">
+                                    <label for="motif">Detalle de la Solicitud:</label>
+                                    <textarea class="form-control" name="motif">
+                                        <t t-att-value="motif"/>
+                                    </textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <button type="submit" class="btn btn-default btn-primary">
+			              Submit 
+                            
+                                        
+                                        
+                                        
+                                        
+                                        
+                                        
+                                        <span class="fa fa-long-arrow-right"/>
+                                    </button>
+                                </div>
+                            </div>
+                            <br/>
+                            <div class="row"/></div>
+                    </form>
+                </section>
+                <section class="s_media_block" src="http://media.sublimevideo.net/v/midnight-sun-short-edit-360p.mp4" muted="muted" loop="loop" autoplay="autoplay" iframefit="fitCont">
+                    <div class="v-align text-center preserve3d">
+                        <h1 class="text-center o_default_snippet_text">Set a catchy headline</h1>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </t>
+</t>
 	
 </odoo>
