--- a/sdc_maintenance/views/maintenance_views.xml
+++ b/sdc_maintenance/views/maintenance_views.xml
@@ -197,41 +197,46 @@
         </field>
     </record>
         
-   <record id="maintenance_intervention_view_kanban" model="ir.ui.view">
-	        <field name="name">maintenance.intervention.kanban</field>
-	        <field name="model">maintenance.intervention</field>
-	        <field name="arch" type="xml">
-	            <kanban default_group_by="state">
-	                <field name="state"/>
-	                <field name="color"/>
-	                <field name="priority"/>
-	                <field name="equipment_id"/>
-	                <field name="technician_id"/>
-	                <field name="kanban_state"/>
-	                <field name="message_needaction_counter"/>
-	                <field name="activity_ids" />
-	                <field name="activity_state" />
-	                <templates>
-	                    <t t-name="kanban-tooltip">
-	                       <ul class="oe_kanban_tooltip">
-	                          <li><b>Type:</b> <field name="type"/></li>
-	                          <li><b>Request:</b> <field name="technician_id"/></li>
-	                       </ul>
-	                    </t>
-	                    <t t-name="kanban-box">
-	                        <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card oe_kanban_global_click oe_semantic_html_override">
-	                            <div class="o_dropdown_kanban dropdown">
-	
-	                                <a class="dropdown-toggle btn" data-toggle="dropdown" href="#" >
-	                                    <span class="fa fa-ellipsis-v"/>
-	                                </a>
-	                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-	                                    <t t-if="widget.editable"><li><a type="edit">Edit...</a></li></t>
-	                                    <t t-if="widget.deletable"><li><a type="delete">Delete</a></li></t>
-	                                    <li><ul class="oe_kanban_colorpicker" data-field="color"/></li>
-	                                </ul>
-	                            </div>
-	                            <div class="oe_kanban_content" tooltip="kanban-tooltip">
+    <record id="maintenance_intervention_view_kanban" model="ir.ui.view">
+	   <field name="name">maintenance.intervention.kanban</field>
+	   <field name="model">maintenance.intervention</field>
+	   <field name="arch" type="xml">
+	       <kanban default_group_by="state">
+	           <field name="state"/>
+	           <field name="color"/>
+	           <field name="priority"/>
+	           <field name="equipment_id"/>
+	           <field name="technician_id"/>
+	           <field name="kanban_state"/>
+	           <field name="message_needaction_counter"/>
+	           <field name="activity_ids" />
+	           <field name="activity_state" />
+	           <templates>
+	               <t t-name="kanban-tooltip">
+	                   <ul class="oe_kanban_tooltip">
+	                       <li><b>Type:</b> <field name="type"/></li>
+	                       <li><b>Request:</b> <field name="technician_id"/></li>
+	                   </ul>
+	               </t>
+	               <t t-name="kanban-box">
+	                   <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card oe_kanban_global_click oe_semantic_html_override">
+	                   <div class="o_dropdown_kanban dropdown">
+	                       <a class="dropdown-toggle btn" data-toggle="dropdown" href="#" >
+	                           <span class="fa fa-ellipsis-v"/>
+	                       </a>
+	                   <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+	                       <t t-if="widget.editable">
+                            <li>
+                                <a type="edit">Edit...</a>
+                            </li>
+                        </t>
+	                       <t t-if="widget.deletable">
+                            <li><a type="delete">Delete</a></li>
+                        </t>
+                            <li><ul class="oe_kanban_colorpicker" data-field="color"/></li>
+	                   </ul>
+	                   </div>
+	                   <div class="oe_kanban_content" tooltip="kanban-tooltip">
 	                                <div class="o_kanban_record_top">
 	                                    <b class="o_kanban_record_title"><field name="name"/></b>
 	                                </div>
