--- a/maintenance_helpdesk/views/helpdesk_views.xml
+++ b/maintenance_helpdesk/views/helpdesk_views.xml
@@ -1,5 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
     <odoo>
+    	<record id="helpdesk_ticket_form_view" model="ir.ui.view">
+            <field name="name">helpdesk.ticket.form.view.inherited</field>
+            <field name="model">helpdesk.ticket</field>
+            <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//button[@name='assign_ticket_to_self']" position="before">
+                    <button string="New Request" name="%(maintenance_action_request_new)d" type="action" class="oe_highlight"
+                        attrs="{'invisible': ['&amp;', ('probability', '=', 0), ('active', '=', False)]}"
+                        context="{'search_default_partner_id': partner_id,
+                                  'default_partner_id': partner_id,
+                                  'default_team_id': team_id,
+                                  'default_campaign_id': campaign_id,
+                                  'default_medium_id': medium_id,
+                                  'default_origin': name,
+                                  'default_source_id': source_id}"/>
+                </xpath>
+                <button name="open_customer_tickets" position="after">
+                    <button class="oe_stat_button" type="action"
+                            name="%(ticket_action_maintenance)d" icon="fa-pencil-square-o"
+                            context="{'default_partner_id': partner_id, 'search_default_draft': 1, 'search_default_sent': 1}">
+                        <div class="o_stat_info">
+                            <field name="sale_number" class="o_stat_value"/>
+                            <span class="o_stat_text"> Quotation(s) </span>
+                        </div>
+                    </button>
+                </button>
+            </field>
+        </record>
+
 
 
     </odoo>
