--- a/maintenance_helpdesk/views/maintenance_request_views.xml
+++ b/maintenance_helpdesk/views/maintenance_request_views.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
     <odoo>
+    	<record id="maintenance_action_request_new" model="ir.actions.act_window">
+        <field name="name">Quotation</field>
+        <field name="res_model">maintenance.request</field>
+        <field name="view_mode">form,tree,graph</field>
+
+    	</record>
 
     
     </odoo>
