--- a/maintenance_helpdesk/views/helpdesk_views.xml
+++ b/maintenance_helpdesk/views/helpdesk_views.xml
@@ -21,7 +21,7 @@
                             name="%(ticket_action_maintenance)d" icon="fa-pencil-square-o"
                             context="{'default_partner_id': partner_id, 'search_default_draft': 1, 'search_default_sent': 1}">
                         <div class="o_stat_info">
-                            <field name="sale_number" class="o_stat_value"/>
+                            <field name="cm_count" class="o_stat_value"/>
                             <span class="o_stat_text"> Request </span>
                         </div>
                     </button>
