--- a/maintenance_helpdesk/views/helpdesk_views.xml
+++ b/maintenance_helpdesk/views/helpdesk_views.xml
@@ -14,10 +14,14 @@
                             >
                         <div class="o_stat_info">
                             <field name="cm_count" class="o_stat_value"/>
-                            <span class="o_stat_text"> Request </span>
+                            <span class="o_stat_text">Request</span>
                         </div>
                     </button>
                 </button>
+                <xpath expr="//field[@name='partner_name']" position="after">
+                    <field name="equipment_id"/>
+                </xpath>
+
             </field>
         </record>
 
