--- a/maintenance_helpdesk/views/maintenance_request_views.xml
+++ b/maintenance_helpdesk/views/maintenance_request_views.xml
@@ -16,7 +16,7 @@
             <field name="model">maintenance.request</field>
             <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form"/>
             <field name="arch" type="xml">
-                <field name="owner_user_id" position="after">
+                <field name="equipment_id" position="after">
                     <field name="ticket_id" widget="many2one"/>
                 </field>
             </field>
