--- a/sdc_maintenance/views/maintenance_views.xml
+++ b/sdc_maintenance/views/maintenance_views.xml
@@ -526,9 +526,10 @@
         
         
      <!-- equipment : views -->
-    <record id="maintenance.hr_equipment_view_form" model="ir.ui.view">
-        <field name="name">equipment.form.maint</field>
+    <record id="maintenance_equipment_view_form" model="ir.ui.view">
+        <field name="name">equipment.form.inherit</field>
         <field name="model">maintenance.equipment</field>
+        <field name="inherit_id" ref="maintenance.hr_equipment_view_form"/>
         <field name="arch" type="xml">
             <form string="Equipments">
                 <sheet>
