--- a/sdc_maintenance/views/maintenance_views.xml
+++ b/sdc_maintenance/views/maintenance_views.xml
@@ -526,12 +526,11 @@
         
         
      <!-- equipment : views -->
-    <record id="maintenance_equipment_view_form" model="ir.ui.view">
-        <field name="name">equipment.form.inherit</field>
+    <record id="maintenance_equipment_view_form_inherit" model="ir.ui.view">
+        <field name="name">maintenance.equipment.view.form.inherit</field>
         <field name="model">maintenance.equipment</field>
         <field name="inherit_id" ref="maintenance.hr_equipment_view_form"/>
         <field name="arch" type="xml">
-            <form string="Equipments">
                 <sheet>
                     <div class="oe_button_box" name="button_box">
 		                  <button name="%(open_view_intervention_new)d"
@@ -691,7 +690,7 @@
                     <field name="activity_ids" widget="mail_activity"/>
                     <field name="message_ids" widget="mail_thread"/>
                 </div>
-            </form>
+         
         </field>
     </record>
 
