--- a/sdc_maintenance/views/maintenance_views.xml
+++ b/sdc_maintenance/views/maintenance_views.xml
@@ -1034,11 +1034,12 @@
         <field name="arch" type="xml">
                 <group>
                     <field name="team_id" class="oe_inline"/>
+                    <field name="helpdesk_team_id" class="oe_inline"/>
                 </group>
         </field>
     </record>
 
-    <!-- Form : views -->
+    <!-- Tree : views -->
     <record id="equipment_category_view_tree_inherit" model="ir.ui.view">
         <field name="name">equipment.category.tree.inherit</field>
         <field name="model">maintenance.equipment.category</field>
@@ -1046,6 +1047,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="team_id" class="oe_inline"/>
+                <field name="helpdesk_team_id" class="oe_inline"/>
             </tree>
 
         </field>
