--- a/sdc_maintenance/views/maintenance_equipment_views.xml
+++ b/sdc_maintenance/views/maintenance_equipment_views.xml
@@ -125,5 +125,90 @@
          
             </field>
         </record>
+
+
+        <record id="maintenance.hr_equipment_view_kanban" model="ir.ui.view">
+            <field name="name">equipment.kanban</field>
+            <field name="model">maintenance.equipment</field>
+            <field name="arch" type="xml">
+                <kanban>
+                    <field name="name"/>
+                    <field name="color"/>
+                    <field name="technician_user_id"/>
+                    <field name="client_id"/>
+                    <field name="category_id"/>
+                    <field name="serial_no"/>
+                    <field name="model_id"/>
+                    <field name="maintenance_ids"/>
+                    <field name="maintenance_open_count"/>
+                    <field name="next_action_date"/>
+                    <field name="activity_ids" />
+                    <field name="activity_state" />
+                    <field name="ot_count"/>
+
+                    <field name="cm_count"/>
+                    <field name="pm_count"/>
+                    <templates>
+                        <t t-name="kanban-tooltip">
+                            <ul class="oe_kanban_tooltip">
+                                <li><b>Serial N°:</b> <field name="serial_no"/></li>
+                                <li><b>Model:</b> <field name="model_id"/></li>
+                            </ul>
+                        </t>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card oe_kanban_global_click">
+                            <div class="o_dropdown_kanban dropdown">
+                                <a class="dropdown-toggle btn" data-toggle="dropdown" href="#" >
+                                    <span class="fa fa-ellipsis-v"/>
+                                </a>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                    <t t-if="widget.editable"><li><a type="edit">Edit...</a></li></t>
+                                    <t t-if="widget.deletable"><li><a type="delete">Remove</a></li></t>
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Color</li>
+                                    <li><ul class="oe_kanban_colorpicker" data-field="color"/></li>
+                                </ul>
+                            </div>
+                            <div class="oe_kanban_content" tooltip="kanban-tooltip">
+                                <div class="o_kanban_record_top">
+                                    <b class="o_kanban_record_title"><field name="name"/><small><span t-if="record.model.raw_value"> (<field name="model"/>)</span></small></b>
+                                </div>
+                                <div class="o_kanban_record_body">
+                                    <div t-if="record.serial_no.raw_value"><field name="serial_no"/></div>
+                                    <div t-if="!record.owner_user_id.raw_value">Unassigned</div>
+                                    <div t-if="record.owner_user_id.raw_value"><field name="owner_user_id"/></div>
+                                </div>
+                                <div class="o_kanban_record_bottom">
+                                    <div class="oe_kanban_bottom_left">
+
+                                      <div class="label label-danger" t-if="record.ot_count.raw_value" >
+                                          <t t-raw="record.ot_count.raw_value"/> WO
+                                      </div>
+                                      <div class="label label-danger" t-if="record.cm_count.raw_value" >
+                                          <t t-raw="record.cm_count.raw_value"/> MC
+                                      </div>
+                                      <div class="label label-danger" t-if="record.pm_count.raw_value" >
+                                          <t t-raw="record.pm_count.raw_value"/> MP
+                                      </div>
+                                        <div class="label label-default" t-if="record.next_action_date.raw_value" >
+                                            <t t-raw="moment(record.next_action_date.raw_value).format('MMMM Do')"/>
+                                        </div>
+                                    </div>
+                                    <div class="oe_kanban_bottom_right">
+                                        <div class="o_kanban_inline_block">
+                                            <field name="activity_ids" widget="kanban_activity" />
+                                        </div>
+                                        <img t-att-src="kanban_image('res.users', 'image_small', record.owner_user_id.raw_value)" t-att-title="record.owner_user_id.value" width="27" height="27" class="oe_kanban_avatar"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="oe_clear"></div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
                        
 </odoo>
