--- a/sdc_maintenance/views/maintenance_equipment_views.xml
+++ b/sdc_maintenance/views/maintenance_equipment_views.xml
@@ -43,7 +43,7 @@
                         </button>
                     </div>
 
-                    <xpath expr="//field[@name='name']" position="before">
+                    <xpath expr="//field[@name='name']" position="after">
                         <div class="o_row">
                             <field name="client_id" widget="res_partner_many2one" placeholder="Company" domain="[('is_company', '=', True)]"/>
                             <field name="brand_id"/>
