--- a/sdc_maintenance/views/maintenance_equipment_views.xml
+++ b/sdc_maintenance/views/maintenance_equipment_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
     <odoo>
+
         <!-- equipment : views -->
         <record id="maintenance_equipment_view_form_inherit" model="ir.ui.view">
             <field name="name">maintenance.equipment.view.form.inherit</field>
@@ -211,6 +212,393 @@
                 </templates>
             </kanban>
         </field>
+    </record>
+
+            <record id="equipment_category_view_form_inherit" model="ir.ui.view">
+            <field name="name">equipment.category.form.inherit</field>
+            <field name="model">maintenance.equipment.category</field>
+            <field name="inherit_id" ref="maintenance.hr_equipment_category_view_form"/>
+            <field name="arch" type="xml">
+                <group>
+                    <field name="team_id" class="oe_inline"/>
+                    <field name="helpdesk_team_id" class="oe_inline"/>
+                </group>
+            </field>
+        </record>
+
+        <record id="equipment_category_view_tree_inherit" model="ir.ui.view">
+            <field name="name">equipment.category.tree.inherit</field>
+            <field name="model">maintenance.equipment.category</field>
+            <field name="inherit_id" ref="maintenance.hr_equipment_category_view_tree"/>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="team_id" class="oe_inline"/>
+                    <field name="helpdesk_team_id" class="oe_inline"/>
+                </tree>
+            </field>
+        </record>
+
+    <!-- Brand - Form - View -->   
+    <record id="maintenance_equipment_brand_view_form" model="ir.ui.view">
+        <field name="name">maintenance.equipment.brand.form</field>
+        <field name="model">maintenance.equipment.brand</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <form string="Brand">
+                <sheet>
+                    <group>
+                        <group>
+                        <field name="name"/>
+                        <field name="code"/>
+                        </group>
+                        <group>
+                        <field name="manager_id"/>
+                        </group> 
+                    </group>
+                    <notebook>
+                        <page string="Description">
+                            <field name="description"/>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <!-- Brand - Tree - View -->  
+    <record id="maintenance_equipment_brand_view_tree" model="ir.ui.view">
+        <field name="name">maintenance.equipment.brand.tree</field>
+        <field name="model">maintenance.equipment.brand</field>
+        <field name="type">tree</field>
+        <field name="arch" type="xml">
+            <tree string="Brand">
+                <field name="name" />
+                <field name="code" />
+                <field name="manager_id" />
+            </tree>
+        </field>
+    </record>
+
+    <!-- Brand - Action - View --> 
+    <record id="maintenance_equipment_brand_action_view" model="ir.actions.act_window">
+        <field name="name">Brand</field>
+        <field name="res_model">maintenance.equipment.brand</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+             <!-- zone-->
+        <record id="view_line_form" model="ir.ui.view">
+            <field name="name">maintenance.zone.form</field>
+            <field name="model">maintenance.zone</field>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <form string="Zone">
+                    <sheet>
+                    <group>
+                        <group>
+                        <field name="name"/>
+                        <field name="code"/>
+                        </group>
+                        <group>
+                        <field name="manager_id"/>
+                        </group> 
+                    </group>
+                    <notebook>
+                        <page string="Description">
+                            <field name="description"/>
+                        </page>
+                    </notebook>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+        <record id="view_line_tree" model="ir.ui.view">
+            <field name="name">maintenance.zone.tree</field>
+            <field name="model">maintenance.zone</field>
+            <field name="type">tree</field>
+            <field name="arch" type="xml">
+                <tree string="Zone line">
+                    <field name="name" />
+                    <field name="code" />
+                    <field name="manager_id" />
+                </tree>
+            </field>
+        </record>
+
+
+        <record id="maintenance_action_view_zone" model="ir.actions.act_window">
+            <field name="name">Zone</field>
+            <field name="res_model">maintenance.zone</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+        
+        <!-- Model Brand-->
+        <record id="maintenance_equipment_model_view_form" model="ir.ui.view">
+            <field name="name">maintenance.equipment.model.form</field>
+            <field name="model">maintenance.equipment.model</field>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <form string="Model">
+                    <sheet>
+                    <group>
+                        <group>
+                        <field name="name"/>
+                        <field name="code"/>
+                        </group>
+                        <group>
+                        <field name="brand_id"/>
+                        </group> 
+                    </group>
+                    <notebook>
+                        <page string="Description">
+                            <field name="description"/>
+                        </page>
+                    </notebook>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+        <record id="maintenance_equipment_model_view_tree" model="ir.ui.view">
+            <field name="name">maintenance.equipment.model.tree</field>
+            <field name="model">maintenance.equipment.model</field>
+            <field name="type">tree</field>
+            <field name="arch" type="xml">
+                <tree string="Model">
+                    <field name="name" />
+                    <field name="code" />
+                    <field name="brand_id" />
+                </tree>
+            </field>
+        </record>
+
+
+    <record id="maintenance_equipment_model_action_view" model="ir.actions.act_window">
+            <field name="name">Model</field>
+            <field name="res_model">maintenance.equipment.model</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+    </record>
+
+     <!-- Form : views -->
+    <record id="equipment_team_view_form_inherit" model="ir.ui.view">
+        <field name="name">equipment.team.form.inherit</field>
+        <field name="model">maintenance.team</field>
+        <field name="inherit_id" ref="maintenance.maintenance_team_view_form"/>
+        <field name="arch" type="xml">
+            <sheet>
+                <group>
+                    <group>
+                        <field name="team_leader_id" widget="many2one"/>
+                    </group>
+                </group>
+            </sheet>
+        </field>
+    </record>
+
+    <!-- Tree : views -->
+    <record id="equipment_team_view_tree_inherit" model="ir.ui.view">
+        <field name="name">equipment.team.tree.inherit</field>
+        <field name="model">maintenance.team</field>
+        <field name="inherit_id" ref="maintenance.maintenance_team_view_tree"/>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="team_leader_id" class="oe_inline"/>
+            </tree>
+
+        </field>
+    </record>
+
+    <!-- Software Type Views-->
+    <record id="maintenance_software_type_view_form" model="ir.ui.view">
+        <field name="name">maintenance.software.type.form</field>
+        <field name="model">maintenance.software.type</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <form string="Software Type">
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="name"/>
+                        </group>
+                        <group>
+                            <field name="code"/>
+                        </group> 
+                    </group>
+                    <notebook>
+                        <page string="Description">
+                            <field name="description"/>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+    
+    <record id="maintenance_software_type_view_tree" model="ir.ui.view">
+        <field name="name">maintenance.software.type.tree</field>
+        <field name="model">maintenance.software.type</field>
+        <field name="type">tree</field>
+        <field name="arch" type="xml">
+            <tree string="Software Type">
+                <field name="name" />
+                <field name="code" />
+            </tree>
+        </field>
+    </record>
+
+
+    <record id="maintenance_software_type_action_view" model="ir.actions.act_window">
+            <field name="name">Software Type</field>
+            <field name="res_model">maintenance.software.type</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Software Views-->
+    <record id="maintenance_equipment_software_view_form" model="ir.ui.view">
+        <field name="name">maintenance.equipment.software.form</field>
+        <field name="model">maintenance.equipment.software</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <form string="Software">
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="name"/>
+                            <field name="version"/>
+                        </group>
+                        <group>
+                            <field name="software_type_id"/>
+                        </group> 
+                    </group>
+                    <notebook>
+                        <page string="Description">
+                            <field name="description"/>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+    
+    <record id="maintenance_equipment_software_view_tree" model="ir.ui.view">
+        <field name="name">maintenance.equipment.software.tree</field>
+        <field name="model">maintenance.equipment.software</field>
+        <field name="type">tree</field>
+        <field name="arch" type="xml">
+            <tree string="Software">
+                <field name="name" />
+                <field name="version" />
+                <field name="software_type_id" />
+            </tree>
+        </field>
+    </record>
+
+
+    <record id="maintenance_equipment_software_action_view" model="ir.actions.act_window">
+            <field name="name">Software</field>
+            <field name="res_model">maintenance.equipment.software</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Dicom Type Views-->
+    <record id="maintenance_dicom_type_view_form" model="ir.ui.view">
+        <field name="name">maintenance.dicom.type.form</field>
+        <field name="model">maintenance.dicom.type</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <form string="Dicom Type">
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="name"/>
+                        </group>
+                        <group>
+                            <field name="code"/>
+                        </group> 
+                    </group>
+                    <notebook>
+                        <page string="Description">
+                            <field name="description"/>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+    
+    <record id="maintenance_dicom_type_view_tree" model="ir.ui.view">
+        <field name="name">maintenance.dicom.type.tree</field>
+        <field name="model">maintenance.dicom.type</field>
+        <field name="type">tree</field>
+        <field name="arch" type="xml">
+            <tree string="Dicom Type">
+                <field name="name" />
+                <field name="code" />
+            </tree>
+        </field>
+    </record>
+
+
+    <record id="maintenance_dicom_type_action_view" model="ir.actions.act_window">
+            <field name="name">Dicom Type</field>
+            <field name="res_model">maintenance.dicom.type</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Dicom Views-->
+    <record id="maintenance_equipment_dicom_view_form" model="ir.ui.view">
+        <field name="name">maintenance.equipment.dicom.form</field>
+        <field name="model">maintenance.equipment.dicom</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <form string="Dicom">
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="name"/>
+                            <field name="ip"/>
+                            <field name="port"/>
+                        </group>
+                        <group>
+                            <field name="equipment_id"/>
+                            <field name="dicom_type_id"/>
+                        </group> 
+                    </group>
+                    <notebook>
+                        <page string="Description">
+                            <field name="description"/>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+    
+    <record id="maintenance_equipment_dicom_view_tree" model="ir.ui.view">
+        <field name="name">maintenance.equipment.dicom.tree</field>
+        <field name="model">maintenance.equipment.dicom</field>
+        <field name="type">tree</field>
+        <field name="arch" type="xml">
+            <tree string="Dicom">
+                <field name="name" />
+                <field name="ip" />
+                <field name="port" />
+                <field name="dicom_type_id" />
+            </tree>
+        </field>
+    </record>
+
+
+    <record id="maintenance_equipment_dicom_action_view" model="ir.actions.act_window">
+            <field name="name">Dicom</field>
+            <field name="res_model">maintenance.equipment.dicom</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
     </record>
 
                        
