--- a/continuous_improvement/views/continuous_improvement_views.xml
+++ b/continuous_improvement/views/continuous_improvement_views.xml
@@ -113,12 +113,26 @@
             <field name="name">continuous.improvement.view.form</field>
             <field name="model">continuous.improvement</field>
             <field name="arch" type="xml">
-                <form>
+                <form string="Continuous Improvement">
+                    <header>
+                        <field name="stage_id" widget="statusbar" options="{'clickable': '1'}" attrs="{'invisible': [('archive', '=', True)]}"/>
+                    </header>
                     <sheet>
+                        <div class="oe_title">
+                            <label for="name" class="oe_edit_only" string="Name"/>
+                            <h1>
+                                <field name="name" placeholder="Asunto"/>
+                            </h1>
+                    </div>
+                    <group>
                         <group>
-                            <field name="name"/>
+                            <field name="assigned_id" string="Assigned"/>
+                            <field name="type_id" widget="many2one"/>
                         </group>
-                    </sheet>
+                    </group>
+                    <field name='description' placeholder="Description ......."/>
+                    <field name='observation' placeholder="Description ......."/>
+                </sheet>
                 </form>
             </field>
         </record>
@@ -129,15 +143,32 @@
             <field name="arch" type="xml">
                 <tree editable="bottom">
                     <field name="name"/>
+                    <field name="stage_id"/>
+                    <field name="assigned_id"/>
+                    <field name="type_id"/>
                 </tree>
             </field>
         </record>
 
+        <record id="continuous_improvement_view_kanban" model="ir.ui.view">
+        <field name="name">continuous.improvement.view.kanban</field>
+        <field name="model">continuous.improvement</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="stage_id">
+                <field name="stage_id"/>
+                <field name="name"/>
+                <field name="assigned_id"/>
+                <field name="type_id"/>
+            </kanban>
+        </field>
+        </record>
+
+
         <record id="continuous_improvement_action" model="ir.actions.act_window">
             <field name="name">Continuous Improvement</field>
             <field name="res_model">continuous.improvement</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_type">kanban</field>
+            <field name="view_mode">tree,form,kanban</field>
         </record>
 
         <menuitem 
