--- a/continuous_improvement/views/continuous_improvement_views.xml
+++ b/continuous_improvement/views/continuous_improvement_views.xml
@@ -167,7 +167,7 @@
         <record id="continuous_improvement_action" model="ir.actions.act_window">
             <field name="name">Continuous Improvement</field>
             <field name="res_model">continuous.improvement</field>
-            <field name="view_type">kanban</field>
+            <field name="view_type">form</field>
             <field name="view_mode">tree,form,kanban</field>
         </record>
 
