--- a/continuous_improvement/views/continuous_improvement_views.xml
+++ b/continuous_improvement/views/continuous_improvement_views.xml
@@ -131,7 +131,7 @@
                         </group>
                     </group>
                     <field name='description' placeholder="Description ......."/>
-                    <field name='observation' placeholder="Description ......."/>
+                    <field name='observation' placeholder="Observation ......."/>
                 </sheet>
                 </form>
             </field>
