--- a/continuous_improvement/views/continuous_improvement_views.xml
+++ b/continuous_improvement/views/continuous_improvement_views.xml
@@ -154,7 +154,7 @@
         <field name="name">continuous.improvement.view.kanban</field>
         <field name="model">continuous.improvement</field>
         <field name="arch" type="xml">
-            <kanban class="o_kanban_mobile">
+            <kanban class="o_kanban_mobile" default_group_by="stage_id">
                 <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
